# workdir

./: LICENSE  README.md  pyproject.toml
src/workdir/: __init__.py  _config.py
